fusy comments